--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "del": "^4.1.1",
-    "inputmask": "^5.0.3"
+    "inputmask": "^5.0.3",
+    "intersection-observer": "^0.11.0"
   }
 }
